[package]
name = "adafruit-lcd-backpack"
version = "0.1.0"
edition = "2021"
description = "Unofficial driver for the Adafruit I2C LCD backpack"
license = "MIT"
readme = "README.md"
keywords = ["adafruit", "lcd", "embedded", "i2c"]

[lib]
name = "adafruit_lcd_backpack"
path = "src/lib.rs"
test = false
bench = false

[dependencies]
embedded-hal = "0.2"
mcp230xx = { git = "https://github.com/michaelkamprath/mcp230xx.git", branch = "rc_i2c", features = ["shared_i2c"]}


[features]

